--- a/imich/html.css
+++ b/imich/html.css
@@ -40,3 +40,20 @@ body,h1,h2,h3,ul,p{
 .salom  a:hover{
     color: rgb(252, 10, 10);
 }
+
+.cantinetir{
+    width: 70%;
+    margin: auto;
+
+}
+
+.xasan{
+    height: 50vh;
+    background-image: url(photo_2024-06-07_11-01-15.jpg);
+    background-size: cover;
+    background-position: center -200px;
+    text-align: center;
+    color: rgb(248, 247, 253);
+    
+
+}
