--- a/imich/html.css
+++ b/imich/html.css
@@ -3,11 +3,11 @@ body,h1,h2,h3,ul,p{
     padding: 0;
 }
 .salom{
-    background-color: rgb(197, 99, 184);
+    background-color: rgb(199, 11, 174);
      border: 3px solid rgb(8, 8, 8);
 }
 .salom h1{
-    color: rgb(8, 8, 8);
+    color: rgba(0, 0, 0, 0.897);
     font-family: sans-serif;
     padding: 15px 0;
     display: inline-block;
@@ -48,12 +48,33 @@ body,h1,h2,h3,ul,p{
 }
 
 .xasan{
-    height: 50vh;
+    height: 60vh;
     background-image: url(photo_2024-06-07_11-01-15.jpg);
     background-size: cover;
     background-position: center -200px;
     text-align: center;
     color: rgb(248, 247, 253);
+    font-family: sans-serif;
     
+
+}
+
+
+.xasan{
+    font-size: 19px;
+    margin-bottom: 1px;
+    padding-top: 19px;
+}
+
+.lola{
+    background-color: rgb(177, 33, 112);
+    color: black;
+    font-family: sans-serif;
+    padding: 20px 0px;
+    
+width: 100%;
+}
+
+.gula {
 
 }
