--- a/imich/html.css
+++ b/imich/html.css
@@ -3,18 +3,18 @@ body,h1,h2,h3,ul,p{
     padding: 0;
 }
 .salom{
-    background-color: rgb(199, 11, 174);
-     border: 3px solid rgb(8, 8, 8);
+    background-color: rgb(204, 64, 146);
+     border: 3px solid rgb(26, 10, 10);
 }
 .salom h1{
-    color: rgba(0, 0, 0, 0.897);
+    color: rgba(7, 10, 221, 0.897);
     font-family: sans-serif;
     padding: 15px 0;
     display: inline-block;
     
 }
 .mmm{
-    color: rgb(235, 37, 37);
+    color: rgb(0, 0, 0);
 }
 
 .cantinetir{
@@ -29,7 +29,7 @@ body,h1,h2,h3,ul,p{
 }
 .nnn li a{
     text-decoration: none;
-    color: black;
+    color: rgb(0, 0, 0);
     font-family: sans-serif;
     padding: 25px 15px;
     display: inline-block;
@@ -38,7 +38,7 @@ body,h1,h2,h3,ul,p{
 }
 
 .salom  a:hover{
-    color: rgb(252, 10, 10);
+    color: rgb(92, 7, 230);
 }
 
 .cantinetir{
@@ -49,11 +49,11 @@ body,h1,h2,h3,ul,p{
 
 .xasan{
     height: 60vh;
-    background-image: url(photo_2024-06-07_11-01-15.jpg);
+    background-image: url(photo_2024-06-07_10-24-33.jpg);
     background-size: cover;
     background-position: center -200px;
     text-align: center;
-    color: rgb(248, 247, 253);
+    color: rgb(241, 186, 5);
     font-family: sans-serif;
     
 
@@ -64,17 +64,69 @@ body,h1,h2,h3,ul,p{
     font-size: 19px;
     margin-bottom: 1px;
     padding-top: 19px;
+
 }
 
-.lola{
+
+ #kitob{
     background-color: rgb(177, 33, 112);
     color: black;
     font-family: sans-serif;
     padding: 20px 0px;
+ display: inline block;
+ width: 100%;
+
+
+ }
+
+#kitob .left{
+float: left;
+}
+
+.rigiht{
+    text-align: center;
+    margin-left: 20px;
+}
+
+
+ #kitob.right{
+float: right;
+ }
+  #kitob input{
+    padding: 5px;
+  }
+
+  .button{
+    padding: 7px 15px;
+    border: none;
+    background-color:coral;
+    color: #000;
+    margin-left: 8px;
+
+  }
+
+
+
+
+
+   #LLL{
+    padding: 30px 0;
+   }
+
+    .box{
+        width: 33.3%;
+        float: left;
+        text-align: center;
+        font-family: sans-serif;
+    }
+
+    .box img{
+        max-width: 100%;
+        width: 150px;
     
-width: 100%;
-}
-
-.gula {
-
-}
+        
+        
+    }
+  
+    
+  
