--- a/imich/html.css
+++ b/imich/html.css
@@ -53,7 +53,7 @@ body,h1,h2,h3,ul,p{
     background-size: cover;
     background-position: center -200px;
     text-align: center;
-    color: rgb(241, 186, 5);
+    color: rgb(34, 26, 0);
     font-family: sans-serif;
     
 
@@ -123,10 +123,17 @@ float: right;
     .box img{
         max-width: 100%;
         width: 150px;
-    
-        
-        
+
     }
+     #footer{
+        
+
+    padding: 50px 0; 
+    text-align: center;
+    background-color: coral;
+    margin-top: 200px;
+}
+    
   
     
   
