--- a/imich/html.css
+++ b/imich/html.css
@@ -182,13 +182,31 @@ float: right;
  }
   .bot{
     border: 2px solid rgb(0, 0, 0);
+    background-color: #867777;
     color: rgb(0, 0, 0);
-    margin: 45px 0;
+    margin-top:  15px 10;
+    
   }
-
-
-  
-
-
+label{
+    display: block;
+    margin: 10px 0;
+}
  
+  
+input textarea{
+    width: 100%;
+    padding: 10px 6px;
+}
+
+.bll{
+    border: 3px solid rgb(0, 0, 0);
+    background-color: #000000;
+    color: #ececec;
+    margin: 20px;
+}
+
+
+ .active{
+    color: coral !important
+ }
    
